<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (c) 2012 tdeus.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v2.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

      <android.support.v7.widget.Toolbar
          android:id="@+id/toolbar"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/main_orange_gradient"
          android:theme="?attr/toolbarTheme"
          app:titleMarginStart="30dp"
          />
    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/white"
        style="@style/Widget.Aptoide.Card"
        >

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          >

        <RelativeLayout
            android:id="@+id/my_account_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

          <ImageView
              android:id="@+id/my_account_user_avatar"
              android:layout_width="74dp"
              android:layout_height="74dp"
              android:layout_margin="16dp"
              android:foregroundGravity="center"
              />

          <LinearLayout
              android:id="@+id/my_account_userinfo"
              android:layout_width="wrap_content"
              android:layout_height="74dp"
              android:layout_marginTop="16dp"
              android:layout_toEndOf="@id/my_account_user_avatar"
              android:layout_toLeftOf="@+id/my_account_edit_user_profile"
              android:layout_toRightOf="@id/my_account_user_avatar"
              android:layout_toStartOf="@+id/my_account_edit_user_profile"
              android:gravity="center_vertical"
              android:orientation="vertical"
              >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myaccount_my_profile_title"
                style="@style/Aptoide.TextView.Regular.M.BlackAlpha"
                />

            <TextView
                android:id="@+id/my_account_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:maxLines="1"
                android:text="Username"
                style="@style/Aptoide.TextView.Regular.S.GreyMedium"
                />

          </LinearLayout>

          <Button
              android:id="@+id/my_account_edit_user_profile"
              android:layout_alignBottom="@+id/my_account_userinfo"
              android:layout_alignParentEnd="true"
              android:layout_alignParentRight="true"
              android:layout_marginEnd="16dp"
              android:layout_marginRight="16dp"
              android:text="@string/myaccount_edit_store_button"
              style="@style/Aptoide.Button.Ghost.S"
              />

        </RelativeLayout>


        <View
            android:id="@+id/my_account_separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:background="@color/grey_fog_normal"
            android:padding="5dp"
            />


        <RelativeLayout
            android:id="@+id/my_account_store"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

          <ImageView
              android:id="@+id/my_account_store_avatar"
              android:layout_width="74dp"
              android:layout_height="74dp"
              android:layout_margin="16dp"
              android:foregroundGravity="center"
              />

          <LinearLayout
              android:id="@+id/my_account_storeinfo"
              android:layout_width="wrap_content"
              android:layout_height="74dp"
              android:layout_marginTop="16dp"
              android:layout_toEndOf="@id/my_account_store_avatar"
              android:layout_toLeftOf="@+id/my_account_edit_user_store"
              android:layout_toRightOf="@id/my_account_store_avatar"
              android:layout_toStartOf="@+id/my_account_edit_user_store"
              android:gravity="center_vertical"
              android:orientation="vertical"
              >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/myaccount_user_store_title"
                style="@style/Aptoide.TextView.Regular.M.BlackAlpha"
                />

            <TextView
                android:id="@+id/my_account_store_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:maxLines="1"
                android:text="Usernae"
                style="@style/Aptoide.TextView.Regular.S.GreyMedium"
                />

          </LinearLayout>

          <Button
              android:id="@+id/my_account_edit_user_store"
              android:layout_alignBottom="@+id/my_account_storeinfo"
              android:layout_alignParentEnd="true"
              android:layout_alignParentRight="true"
              android:layout_marginEnd="16dp"
              android:layout_marginRight="16dp"
              android:text="@string/myaccount_edit_store_button"
              style="@style/Aptoide.Button.Ghost.S"
              />

        </RelativeLayout>

        <Button
            android:id="@+id/button_logout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_margin="16dp"
            android:text="@string/myaccount_log_out_button"
            android:theme="@style/Aptoide.Button"
            style="@style/Widget.AppCompat.Button"
            />
      </LinearLayout>
    </android.support.v7.widget.CardView>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        >
      <include
          layout="@layout/displayable_grid_header"
          android:id="@+id/my_account_notifications_header"
          />

    </FrameLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/fragment_my_account_notification_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
  </LinearLayout>

</ScrollView>