...
          android:layout_marginEnd="@dimen/padding_small"
          android:layout_marginRight="@dimen/padding_small"
          android:gravity="center"
          >

        <ImageView
            android:id="@+id/create_store_image"
            android:layout_width="@dimen/store_picture_large_size"
            android:layout_height="@dimen/store_picture_large_size"
            android:src="@drawable/create_store_avatar"
            />

        <ImageView
...
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/skip"
            />

        <Button
            android:id="@+id/create_store_action"
            style="@style/Aptoide.Button.Alternative"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/padding_smaller"
            android:layout_marginLeft="@dimen/padding_smaller"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
...
