...
            android:text="@string/cancel"
            android:visibility="gone"
            tools:visibility="visible"
            />

        <android.widget.Button
            android:id="@+id/create_user_create_profile"
            style="@style/Aptoide.Button.Alternative"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/padding_smaller"
            android:layout_marginLeft="@dimen/padding_smaller"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
...
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          >

        <RelativeLayout
            android:id="@+id/create_user_image_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_small"
            android:layout_marginLeft="@dimen/padding_small"
            android:layout_marginTop="@dimen/padding_medium"
            android:layout_marginEnd="@dimen/padding_small"
...
