...
  <string name="spot_share">Spot&amp;Share</string>

  <string name="youSent">You <b>sent</b> this app</string>
  <string name="youReceived">You <b>received</b> this app</string>
  <string name="youAreSending">You are <b>sending</b> this app</string>

  <string name="ok">OK</string>

  <string name="noHotspotYet">Please, you or your friend(s) should create a hotspot</string>
  <string name="couldNotCreateHotspot">Couldn\'t create the hotspot</string>
  <string name="unkownHotspotError">We are sorry, there was an error while trying to create the hotspot</string>

  <string name="noSelectedHotspot">Please select a friends phone in the Spot</string>
...
