<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

  <ProgressBar
      android:id="@+id/progressBar"
      style="?android:attr/progressBarStyleHorizontal"
      android:layout_width="0dp"
      android:layout_height="4dp"
      android:indeterminate="false"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/cancelButton"
      app:layout_constraintHorizontal_chainStyle="spread"
      app:layout_constraintHorizontal_weight="1"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />


  <TextSwitcher
      android:id="@+id/downloadState"
      style="@style/Aptoide.TextView.Medium.XS.Grey"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:ellipsize="end"
      android:inAnimation="@android:anim/fade_in"
      android:maxLines="1"
      android:outAnimation="@android:anim/fade_out"
      android:text="@string/appview_short_downloading"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/progressBar"
      >

    <TextView
        style="@style/Aptoide.TextView.Medium.XS.Grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        />

    <TextView
        style="@style/Aptoide.TextView.Medium.XS.Grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        />

  </TextSwitcher>

  <TextView
      android:id="@+id/downloadProgressNumber"
      style="@style/Aptoide.TextView.Medium.XS.Grey"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="start"
      app:layout_constraintEnd_toEndOf="@+id/progressBar"
      app:layout_constraintTop_toBottomOf="@+id/progressBar"
      tools:text="80%"
      />

  <FrameLayout
      android:id="@+id/frameLayout"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/cancelButton"
      app:layout_constraintTop_toTopOf="parent"
      >

    <cm.aptoide.aptoideviews.common.AnimatedImageView
        android:id="@+id/resumePauseButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:contentDescription="@null"
        android:padding="12dp"
        android:scaleType="fitCenter"
        android:visibility="gone"
        app:animation="?attr/resume_to_pause"
        app:reverseAnimation="?attr/pause_to_resume"
        tools:visibility="visible"
        />

  </FrameLayout>

  <ImageView
      android:id="@+id/cancelButton"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:layout_gravity="center"
      android:contentDescription="@null"
      android:scaleType="center"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/frameLayout"
      app:layout_constraintStart_toEndOf="@+id/progressBar"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="?attr/download_progress_cancel"
      tools:visibility="visible"
      />

</androidx.constraintlayout.widget.ConstraintLayout>