<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="gmsregister_title_registration_info">For apps to work properly, you need to register your device ID with Google.</string>
  <string name="gms_register_button_copy_id">Copy ID</string>
  <string name="gms_register_button_this_page">this page</string>
  <string name="gms_register_button_submit_code">Submit your device ID in %s</string>
  <string name="device_register_message_register_success">Device registered successfully</string>
  <string name="gms_register_skip_login_button">Skip</string>
  <string name="gms_register_checkbox_dontaskmeagain">Don\'t ask me again</string>
  <string name="gms_register_message_login">You need to log in to Google for Google apps to work properly.</string>

  <!--Incentive Bonus Badge-->
  <string name="incentives_badge_full">Up to %s%% Bonus</string>
  <string name="incentives_badge_up_to">Up to</string>
  <string name="incentives_badge_amount">%s%%</string>
  <string name="incentives_badge_bonus">Bonus</string>
  <string name="incentives_banner_title">Up to %s%% bonus in every purchase!</string>
  <string name="incentives_banner_body">Use your Aptoide balance to get more items in apps with this symbol %s</string>

  <!-- Download View -->
  <string name="appview_short_downloading">Downloading</string>
  <string name="apps_short_download_paused">Download paused</string>
  <string name="apps_short_installing">Installing</string>
  <string name="appview_short_installing">Installing</string>

  <!-- Error View -->
  <string name="error503">Ufff… Is it just me or is everyone installing apps at the same time?</string>
  <string name="could_not_connect_internet">Couldn\'t connect to the Internet</string>

  <!-- Login -->
  <string name="login_safe_body_1">Secure login</string>
  <string name="login_safe_body_2">No passwords saved on our side</string>
</resources>
